@startuml akdb-data-model
title ArchitecturalKnowledgeDB - Core Knowledge Data Model
class Project {
 project_id
}
class Repository {
 repository_id
 local_path
 scan_policy
}
class KnowledgeItem {
 item_uid
 item_type
 local_id
 authority_level
 source_uri
 metadata_json
}
class KnowledgeLink {
 source_item_uid
 target_ref
 link_type
}
class UMLDiagram {
 diagram_uid
 diagram_id
 notation
 diagram_kind
 model_json
 raw_source
}
class UMLElement {
 element_uid
 element_id
 element_type
}
class UMLRelationship {
 relationship_uid
 relationship_type
}
class ExportTarget {
 target_id
 repository_id
 dest_root
 content_kinds
 auto_export
 enabled
}
class ExportDirty {
 id
 target_id
 item_kind
 item_ref
 op
}
class Finding {
 finding_uid
 finding_type
 severity
}
class Commit {
 commit_uid
 hash
}
Project "1" *-- "*" Repository
Project "1" *-- "*" KnowledgeItem
Project "1" *-- "*" UMLDiagram
Project "1" *-- "*" ExportTarget
Project "1" *-- "*" ExportDirty
Project "1" *-- "*" Finding
Repository "1" *-- "*" Commit
ExportTarget "*" --> "1" Repository : destination owner
ExportDirty "*" --> "0..1" ExportTarget : optional target
KnowledgeItem "1" --> "*" KnowledgeLink
UMLDiagram "1" *-- "*" UMLElement
UMLDiagram "1" *-- "*" UMLRelationship
note right of KnowledgeItem
SAD documents, preamble, frontmatter,
sections and decisions share this spine.
Canonical body owners carry body_text,
repo_source_key, and authored_in metadata.
end note
note right of ExportDirty
Canonical mutation and dirty work commit together.
Post-commit target I/O drains this queue only after
that authoritative transaction succeeds.
end note
@enduml
